syntax = "proto3";
package core.grow.v1beta1;
import "gogoproto/gogo.proto";

import "cosmos/bank/v1beta1/bank.proto";
option go_package = "github.com/QuadrateOrg/core/x/grow/types";

message Position {
        uint64 id = 1;
        string creator = 2; 
        string depositId = 3;
        string collateral = 4;
        string oracleTicker = 5; 
        uint64 borrowedAmountInUSD = 6;
        repeated string loanIds = 7;
}

message LendAsset {
        uint64 id = 1;
        string LendAssetId = 2;
        cosmos.bank.v1beta1.Metadata assetMetadata = 3 [ (gogoproto.moretags) = "yaml:\"assetMetadata\"", (gogoproto.nullable)   = false ];
        string oracleAssetId = 4;
}