syntax = "proto3";

package core.grow.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "core/grow/v1beta1/params.proto";
import "core/grow/v1beta1/loan.proto";
import "core/grow/v1beta1/lend.proto";
import "core/grow/v1beta1/liquidation.proto";
import "core/grow/v1beta1/pair.proto";
import "cosmos/bank/v1beta1/bank.proto";

option go_package = "github.com/QuadrateOrg/core/x/grow/types";

service Query {
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/params";
  }

  rpc AssetByAssetId(QueryAssetByAssetIdRequest) returns (QueryAssetByAssetIdResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/asset/{id}";
  }

  rpc GetAllAssets(QueryGetAllAssetsRequest) returns (QueryGetAllAssetsResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/assets";
  }

  rpc AllPosition(QueryAllPositionRequest) returns (QueryAllPositionResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/positions";
  }

  rpc PositionById(QueryPositionByIdRequest) returns (QueryPositionResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/position/{id}";
  }

  rpc PositionByCreator(QueryPositionByCreatorRequest) returns (QueryPositionResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/position_creator/{creator}";
  }

  rpc AllLiquidatorPosition(QueryAllLiquidatorPositionRequest) returns (QueryAllLiquidatorPositionResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/liquidator_positions";
  }

  rpc LiquidatorPositionByCreator(QueryLiquidatorPositionByCreatorRequest) returns (QueryLiquidatorPositionByCreatorResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/liquidator_position_by_creator/{creator}";
  }

  rpc LiquidatorPositionById(QueryLiquidatorPositionByIdRequest) returns (QueryLiquidatorPositionByIdResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/liquidator_position_by_id/{id}";
  }

  rpc LendById(QueryLendByIdRequest) returns (QueryLendByIdResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/lend/{id}";
  }
  
  rpc LoanById(QueryLoanByIdRequest) returns (QueryLoanByIdResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/loan/{id}";
  }

  rpc YieldPercentage(QueryYieldPercentageRequest) returns (QueryYieldPercentageResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/yield/{id}";
  }

  rpc PairByDenomId(PairByDenomIdRequest) returns (PairByDenomIdResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/pair/{denomId}";
  }

  rpc AllPairs(AllPairsRequest) returns (AllPairsResponse) {
    option (google.api.http).get = "/core/grow/v1beta1/pairs";
  }
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1;
}


/* 
AssetByAssetId 
*/
message QueryAssetByAssetIdRequest {
  string id = 1;
}

message QueryAssetByAssetIdResponse {
  Asset asset = 1 [(gogoproto.nullable) = false];
}


/*
GetAllAssets
*/
message QueryGetAllAssetsRequest {}

message QueryGetAllAssetsResponse {
  repeated Asset assets = 1 [(gogoproto.nullable) = false];
}

/* 
PositionById 
*/
message QueryPositionByIdRequest {
  string id = 1;
}

message QueryPositionResponse {
  Position position = 1 [(gogoproto.nullable) = false]; 
}

/* 
PositionByCreator 
*/
message QueryPositionByCreatorRequest {
  string creator = 1;
}

/* 
AllPosition 
*/
message QueryAllPositionRequest {}

message QueryAllPositionResponse {
  repeated Position positions = 1 [(gogoproto.nullable) = false];
}

/* 
AllLiquidatorPosition 
*/
message QueryAllLiquidatorPositionRequest {}

message QueryAllLiquidatorPositionResponse {
  repeated LiquidatorPosition liquidators_position = 1 [(gogoproto.nullable) = false];
}

/* 
LiquidatorPositionByCreator 
*/
message QueryLiquidatorPositionByCreatorRequest {
  string creator = 1;
}

message QueryLiquidatorPositionByCreatorResponse {
  repeated LiquidatorPosition position = 1 [(gogoproto.nullable) = false];
}

/* 
LiquidatorPositionById 
*/
message QueryLiquidatorPositionByIdRequest {
  string id = 1;
}

message QueryLiquidatorPositionByIdResponse {
  LiquidatorPosition liquidators_position = 1 [(gogoproto.nullable) = false];
}

/* 
LoanById 
*/
message QueryLoanByIdRequest {
  string id = 1;
}

message QueryLoanByIdResponse {
  Loan loan = 1 [(gogoproto.nullable) = false];
}

/* 
LendById 
*/
message QueryLendByIdRequest {
  string id = 1;
}

message QueryLendByIdResponse {
  Lend lend = 1 [(gogoproto.nullable) = false];
}

/* 
YieldPercentage 
*/
message QueryYieldPercentageRequest {
  string id = 1;
}

message QueryYieldPercentageResponse {
  int64 RealRate = 1;
  int64 BorrowRate = 2;
  int64 RealYield = 3;
  int64 GrowYield = 4;
  string ActualAction = 5;
  int64 Difference = 6;
}

/* 
PairByDenomId 
*/
message PairByDenomIdRequest {
  string denomId = 1;
}

message PairByDenomIdResponse {
  gTokenPair pair = 1;
}

/* 
AllPairs 
*/
message AllPairsRequest {}

message AllPairsResponse {
  repeated gTokenPair pairs = 1;
}